# FragFold-X

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
examples/example1/: params.yaml  run_example1.sh
examples/example1/output/: fragfold_params.yaml  structure_scores.csv
examples/example2_slurm/: params.yaml  run_example2.sh  submit_ff.sh
examples/example3_programmatic_configs/: generate_params.py  run_example3.sh
fragfold3/: __init__.py  config.py  executables.yaml
fragfold3/job_schedulers/: colabfold_sbatch_params.json  colabfold_sbatch_params.txt  slurm_job_submitter.py
fragfold3/local_data/: fragfold2.mplstyle  fragfold3_plotstyle.mplstyle
fragfold3/pipeline/: main_pipeline.py  parameters.py  result_summary.py
fragfold3/scripts/: run_fragfold3.py
fragfold3/structure_scoring/: contacts.py  structure_comparison.py  weighted_contacts.py
fragfold3/tests/: test_fragfold3.py  test_indexing_integration.py
fragfold3/tools/: cdhit_tools.py  chimerax_tools.py  cli_wrappers.py  colabfold_tools.py  notebook_utils.py  pdb_tools.py  plotting.py  pymol_utils.py
fragfoldx/: __init__.py  config.py
fragfoldx/job_schedulers/: colabfold_sbatch_params.json  colabfold_sbatch_params.txt  slurm_job_submitter.py
fragfoldx/pipeline/: main_pipeline.py  parameters.py  result_summary.py
fragfoldx/scripts/: run_fragfoldx.py
fragfoldx/structure_scoring/: contacts.py  structure_comparison.py  weighted_contacts.py
fragfoldx/tests/: test_fragfoldx.py  test_indexing_integration.py
fragfoldx/tools/: colabfold_tools.py  pdb_tools.py  plotting.py
(+73 files in other folders)
